--- a/mandelbulber2/formula/ui/mandelbulb.ui
+++ b/mandelbulber2/formula/ui/mandelbulb.ui
@@ -175,7 +175,7 @@
 &lt;tr&gt;&lt;th&gt;Reference&lt;/th&gt;&lt;td&gt;&lt;a href=&quot;http://www.fractalforums.com/3d-fractal-generation/true-3d-mandlebrot-type-fractal/&quot;&gt;http://www.fractalforums.com/3d-fractal-generation/true-3d-mandlebrot-type-fractal/&lt;br&gt;
 &lt;/td&gt;&lt;/tr&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;boolean001.fract&lt;br&gt;stereoscopic 001.fract&lt;br&gt;the grid 002.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/boxWrap-bulb.fract&lt;br&gt;Krzysztof Marczak collection - license Creative Commons (CC-BY 4.0)/hybrid22 - foldigIntPow v 2.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;boolean001.fract&lt;br&gt;stereoscopic 001.fract&lt;br&gt;the grid 002.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/KIFS_mandelbulb_trapLights.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/boxWrap-bulb.fract&lt;br&gt;...&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
