--- a/mandelbulber2/formula/ui/transf_platonic_solid.ui
+++ b/mandelbulber2/formula/ui/transf_platonic_solid.ui
@@ -412,7 +412,7 @@
 &lt;tr&gt;&lt;th&gt;Reference&lt;/th&gt;&lt;td&gt;&lt;a href=&quot;http://www.fractalforums.com/3d-fractal-generation/platonic-dimensions/msg36528/#msg36528&quot;&gt;http://www.fractalforums.com/3d-fractal-generation/platonic-dimensions/msg36528/#msg36528&lt;br&gt;
 &lt;/td&gt;&lt;/tr&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/platonicSolid_menger_hybrid.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/amazing_surf_mod2_PlatonicSolid.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/platonicSolid_menger_hybrid.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
