--- a/mandelbulber2/formula/ui/transf_poly_fold_atan.ui
+++ b/mandelbulber2/formula/ui/transf_poly_fold_atan.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>transf_poly_fold_atan</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
@@ -544,7 +544,7 @@
          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Can sometimes improve render quality when using analytic DE&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="text">
-         <string>Analytic DE alternate method</string>
+         <string>Analytic DE alternative method</string>
         </property>
        </widget>
       </item>
